[package]
name = "cxx"
version = "0.1.2"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Safe interop between Rust and C++"
repository = "https://github.com/dtolnay/cxx"
documentation = "https://docs.rs/cxx"
readme = "README.md"

[badges]
travis-ci = { repository = "dtolnay/cxx" }

[dependencies]
anyhow = "1.0"
cc = "1.0.49"
codespan = "0.7"
codespan-reporting = "0.7"
cxxbridge-core = { version = "=0.1.2", path = "../cxx-core" }
cxxbridge-macro = { version = "=0.1.2", path = "../cxx-macro" }
link-cplusplus = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
rustversion = "1.0"
trybuild = "1.0"
